# shakmaty-syzygy

./: .gitattributes  .travis.yml  Cargo.toml  README.md  download-test-assets.sh
examples/: meta.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: pawnful.rs
src/: blocking.rs  filesystem.rs  lib.rs  meta.rs  table.rs  tablebase.rs  tablebases.rs  types.rs
src/aio/: filesystem.rs  mod.rs  table.rs  tablebase.rs
tables/chess/: KBBvK.rtbw  KBNvK.rtbw  KBPvK.rtbw  KBPvK.rtbz  KBvK.rtbz  KBvKB.rtbz  KNNvK.rtbz  KNvKN.rtbz  KNvKP.rtbz  KPPvK.rtbw  KPvK.rtbw  KPvKP.rtbz  KQNvK.rtbw  KQNvK.rtbz  KQRvK.rtbz  KQvK.rtbw  KQvK.rtbz  KQvKN.rtbw  KQvKN.rtbz  KQvKQ.rtbw  KQvKQ.rtbz  KRNvK.rtbw  KRNvK.rtbz  KRPvK.rtbw  KRPvK.rtbz  KRRvK.rtbz  KRvK.rtbw  KRvK.rtbz  KRvKN.rtbw  KRvKP.rtbw  KRvKR.rtbw
tables/regular/: KBBvK.rtbz  KBNvK.rtbz  KBvK.rtbw  KBvKB.rtbw  KBvKN.rtbw  KBvKN.rtbz  KBvKP.rtbw  KBvKP.rtbz  KNNvK.rtbw  KNPvK.rtbw  KNPvK.rtbz  KNvK.rtbw  KNvK.rtbz  KNvKN.rtbw  KNvKP.rtbw  KPPvK.rtbz  KPvK.rtbz  KPvKP.rtbw  KQBvK.rtbw  KQBvK.rtbz  KQNvKQ.rtbw  KQNvKQ.rtbz  KQPvK.rtbw  KQPvK.rtbz  KQQvK.rtbw  KQQvK.rtbz  KQRNvK.rtbw  KQRNvK.rtbz  KQRNvKQ.rtbw  KQRNvKQ.rtbz  KQRvK.rtbw  KQRvKQ.rtbw  KQRvKQ.rtbz  KQvKB.rtbw  KQvKB.rtbz  KQvKP.rtbw  KQvKP.rtbz  KQvKR.rtbw  KQvKR.rtbz  KRBvK.rtbw  (+9 more)
tests/: suite.rs
