[package]
name = "shakmaty-syzygy"
version = "0.25.2" # remember to update changelog and html_root_url
description = "Probe Syzygy tablebases"
repository = "https://github.com/niklasf/shakmaty-syzygy"
readme = "README.md"
license = "GPL-3.0+"
authors = ["Niklas Fiekas <niklas.fiekas@backscattering.de>"]
categories = ["games"]
keywords = ["chess", "syzygy", "tablebase"]
exclude = ["tables/**/*.*tb*"]
edition = "2021"
rust-version = "1.77"

[[bench]]
name = "benches"
harness = false

[dependencies]
arrayvec = "0.7"
bitflags = "2"
shakmaty = "0.27.2"
byteorder = "1.2"
rustc-hash = "2"
memmap2 = { version = "0.9", optional = true }
async-trait = "0.1.83"
async-lock = "3.4"
futures-util = "0.3.31"

[dev-dependencies]
csv = "1"
bencher = "0.1"
clap = { version = "4", features = ["derive", "deprecated"] }
smol = "2"

[features]
default = []
mmap = ["memmap2"]
variant = ["shakmaty/variant"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docs_rs)'] }
